@startuml
abstract class FileComponent{
    # String name, date
    # FileComponent parent
    + void setParent(FileComponent parent)
    + {abstract} String getStringTreeFolder(): String
    + String getPath(): String
    + void addItem(FileComponent component): void
    + void removeItem(FileComponent component): void
}

class FileItem{
    + FileItem(String name, date)
    + String getStringTreeFolder(): String
}
class Folder{
    # List<FileComponent> children
    + Folder(String name, String date)
    + String getStringTreeFolder(): String
    + String getPath(): String
    + void addItem(FileComponent component): void
    + void removeItem(FileComponent component): void
}

FileComponent <|-- FileItem
FileComponent <|-- Folder
Folder *--> FileComponent: file
@enduml